--- a/.github/workflows/tengri.yml
+++ b/.github/workflows/tengri.yml
@@ -4,10 +4,8 @@
 name: Python application
 
 on:
-  push:
-    branches: [ * ]
   pull_request:
-    branches: [ * ]
+    branches: [ master ]
 
 jobs:
   build:
