--- a/.github/workflows/tengri.yml
+++ b/.github/workflows/tengri.yml
@@ -1,8 +1,6 @@
 name: Tengri tests
 
 on:
-  pull_request:
-    branches: [ master ]
   push:
     paths-ignore:
       - '*.md'
@@ -22,13 +20,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install flake8 pytest
     - name: Lint with flake8
       run: |
-        pip install flake8
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        echo 'stage 2'
-        #pip install pytest
-        #pytest
+        pytest
